--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
     </section>
     <section class="my-work" id="Work">
             <h2 class="section__title section__title--work">My work</h2>
-            <p class="section__subtitle section__subtitle--work"></p>
+            <p class="section__subtitle section__subtitle--work">Here I showcase of my work</p>
             <div class="porfolio">
                 <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
                 <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
