--- a/Index.html
+++ b/Index.html
@@ -72,10 +72,14 @@
             <h2 class="section__title section__title--work">My work</h2>
             <p class="section__subtitle section__subtitle--work">Here I showcase of my work</p>
             <div class="porfolio">
+                <!-- <a href="" class="porfolio__item"><img src="https://wallpaperaccess.com/full/167408.jpg" alt="" class="porfolio__img"></a>
+                <a href="" class="porfolio__item"><img src="https://i.pinimg.com/originals/54/7a/9c/547a9cc6b93e10261f1dd8a8af474e03.jpg" alt="" class="porfolio__img"></a>
+                <a href="" class="porfolio__item"><img src="https://wallpaperaccess.com/full/869967.jpg" alt="" class="porfolio__img"></a>
+                <a href="" class="porfolio__item"><img src="https://i.ytimg.com/vi/Ytm_uVdfgoQ/maxresdefault.jpg" alt="" class="porfolio__img"></a>
                 <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
                 <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
                 <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
-                <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a>
+                <a href="" class="porfolio__item"><img src="" alt="" class="porfolio__img"></a> -->
                 
             </div>
         </h2>
