changed images background color

--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,9 @@
 <div class="logo">
     <img src="" alt="">
 </div>
-<button class="nav-toggle" aria-label="toggle navigation"></button>
 <span class="class"></span>
 <nav class="class">
-    <ul class="navlist">
+    <ul class="nav__list">
         <li class="nav-item"><a href="#home">Home</a></li>
         <li class="nav-item"><a href="#services">Services</a></li>
         <li class="nav-item"><a href="#about">About Me</a></li>
