--- a/Index.html
+++ b/Index.html
@@ -80,12 +80,12 @@
             </div>
         </h2>
     </section>
-    <footer>
+    <footer class="footer">
         <a href="kaloki2012@gmail.com" class="footer__link">kaloki2012@gmail.com</a>
         <ul class="social-list">
-            <li class="social-item" >instagram</li>
-            <li class="socialitem">facebook</li>
-            <li class="socialitem">whatsaap</li>
+            <li><a href=""><i class="fab fa-instagram-square"></i></a></li>
+            <li class="social-item">facebook</li>
+            <li class="social-item">whatsaap</li>
         </ul>
     </footer>
     
