changed image link to acces porfolio website

--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,10 @@
 <span class="class"></span>
 <nav class="class">
     <ul class="nav__list">
-        <li class="nav-item"><a href="#home">Home</a></li>
-        <li class="nav-item"><a href="#services">Services</a></li>
-        <li class="nav-item"><a href="#about">About Me</a></li>
-        <li class="nav-item"><a href="#Work">My work</a></li>
+        <li class="nav-item"><a href ="#home" class="navcontent">Home</a></li>
+        <li class="nav-item"><a href="#services" class="navcontent">Services</a></li>
+        <li class="nav-item"><a href="#about" class="navcontent">About Me</a></li>
+        <li class="nav-item"><a href="#Work" class="navcontent">My work</a></li>
     </ul>
 </nav>
     </header>
